# telecomtp

./: .gitignore  ACCESO_MOVIL.md  APLICAR_MIGRACION_SERVIDOR.md  BACKUP_README.md  CHECKLIST_DESPLIEGUE_FINAL.md  DEMO_SISTEMA_SIMPLIFICADO.md  Dockerfile  ESTILOS_GLOBALES.md  GIT_SETUP.md  GUIA_DESPLIEGUE.md  GUIA_DESPLIEGUE_DIGITALOCEAN.md  GUIA_DESPLIEGUE_PRODUCCION.md  GUIA_SUBPROYECTOS.md  INSTRUCCIONES_SMARTASP.md  MEJORAS_USUARIOS_PERMISOS.md  NEOSTRUCTURE_THEME.md  PWA_README.md  README.md  README_CARGA_DATOS.md  REPORTE_ESTADO_SISTEMA_ARCA.md  RESUMEN_PROBLEMAS_RESUELTOS.md  RESUMEN_SOLUCION_USUARIOS.md  ROADMAP_BASE_DATOS.md  ROLES_SETUP.md  SMARTASP_DEPLOY_GUIDE.md  SOLUCION_GESTION_USUARIOS.md  SOLUCION_PROBLEMAS.md  VALIDACION_REPOSITORIO.md  activate_production.py  actualizar_categorias_colores.py  actualizar_digitalocean.sh  actualizar_servidor.py  actualizar_servidor.sh  actualizar_servidor_automatico.sh  agregar_dias_trabajados.py  aplicar_toast_todos_modulos.py  aprobar_gastos.py  cargar_datos_masivos.py  check_before_push.sh  clean_droplet.sh  (+176 more)
core/: __init__.py  admin.py  admin_planillas.py  cache_config.py  cache_utils.py  constants.py  decorators.py  firebase_sync.py  forms.py  forms_simple.py  middleware.py  middleware_permisos.py  models.py  pagination_utils.py  query_utils.py  reportes_pdf.py  services.py  urls.py  utils.py  views.py  views_usuarios_mejoradas.py
deploy/: README_DEPLOYMENT.md  README_SMARTASP.md  deploy_app.sh  deploy_production.sh  setup_droplet.sh  smartasp_deploy.py
gunicorn/: gunicorn.conf.py
scripts/: backup_automatico.py  (+4 more)
(+402 files in other folders)
