[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sistema-construccion-django"
version = "0.1.0"
description = "Sistema de construcción con Django"
requires-python = ">=3.8"
dependencies = [
    "Django>=5.0",
    "Pillow",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "joblib>=1.1.0",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "psutil>=5.9.0",
]

[tool.pyright]
include = [
    "core",
    "sistema_construccion"
]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "**/venv",
    "**/.venv",
    "**/migrations"
]
ignore = []
defineConstant = {}
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
reportMissingImports = "warning"
reportMissingTypeStubs = false
pythonVersion = "3.8"
pythonPlatform = "Windows"
executionEnvironments = [
    {
        "root": ".",
        "pythonVersion": "3.8",
        "pythonPlatform": "Windows",
        "extraPaths": [
            "./venv/Lib/site-packages"
        ]
    }
]

[tool.django-stubs]
django_settings_module = "sistema_construccion.settings"
